apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__insert_with_nested_field_set.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
description: "Make sure everything is in status 'new' and we have all the entities and root fields"
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:products:type:Query:hash:c47b7852838b8adb44171dce90b149ef8b3b6982e9766a84ce9d53a87b187a97:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "allProducts",
      "subgraph-products",
      "type-products-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "allProducts"
      ]
    },
    "subgraphName": "products",
    "subgraphRequest": {
      "query": "{ allProducts { name createdBy { __typename email country { a } } } }"
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "allProducts": [
          {
            "name": "Test",
            "createdBy": {
              "__typename": "User",
              "email": "test@test.com",
              "country": {
                "a": "France"
              }
            }
          }
        ]
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:users:type:User:representation:e2d4bfa6d172a744110f37cd5227ffb3d146259fe84d19a6c91d8da877373f3e:hash:06b7c83997b2e307d3e2a06a3ce70af42cfbb456155d2216717d7f99b3daefb9:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "subgraph-users",
      "type-users-User",
      "user-email:test@test.com-country-a:France"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "User",
      "entityKey": {
        "country": {
          "a": "France"
        },
        "email": "test@test.com"
      }
    },
    "subgraphName": "users",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on User { name } } }",
      "variables": {
        "representations": [
          {
            "country": {
              "a": "France"
            },
            "email": "test@test.com",
            "__typename": "User"
          }
        ]
      }
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "name": "test"
      }
    },
    "warnings": []
  }
]
