apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__insert_with_requires-3.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
description: "Make sure everything is in status 'cached' and we have all the entities and root fields"
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:inventory:type:Product:representation:fad83d6ff957f12a7829ec7f25a2160d4bd7530abbe47937f19fbed8996d10d9:hash:a2de6495e5f57d8cc6114170dd9809a1b5c534bfb711c9bca4b58239cefc2da8:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "product",
      "product-1",
      "subgraph-inventory",
      "type-inventory-Product"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "Product",
      "entityKey": {
        "upc": "1"
      }
    },
    "subgraphName": "inventory",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { shippingEstimate } } }",
      "variables": {
        "representations": []
      }
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "shippingEstimate": 15
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:products:type:Query:hash:2e2a923511e2880c36ea90d6af1a53c7079e9dfa663e9fcf3834989b7545236b:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "subgraph-products",
      "topProducts",
      "topProducts-5",
      "type-products-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "topProducts"
      ]
    },
    "subgraphName": "products",
    "subgraphRequest": {
      "query": "{ topProducts { __typename name upc price weight } }"
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "topProducts": [
          {
            "__typename": "Product",
            "upc": "1",
            "name": "Test",
            "price": 150,
            "weight": 5
          }
        ]
      }
    },
    "warnings": []
  }
]
