apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__invalidate-5.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: cache_keys
---
[
  {
    "invalidationKeys": [
      "currentUser"
    ],
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { activeOrganization { __typename id } } }"
    },
    "status": "cached",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "data": {
        "currentUser": {
          "activeOrganization": {
            "__typename": "Organization",
            "id": "1"
          }
        }
      }
    }
  },
  {
    "invalidationKeys": [
      "organization",
      "organization-1"
    ],
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { creatorUser { __typename id } } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          }
        ]
      }
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "creatorUser": {
        "__typename": "User",
        "id": 2
      }
    }
  }
]
